--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <section class="intro">
-      <h1>Hi, My name is Kyle Wick</h1>
+      <h1>Hi, I'm Kyle Wick</h1>
     </section>
     <section class="about"></section>
     <section class="projects"></section>
