Re-added the previously removed element

--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
         <button class="btn">View My Work</button>
         <button class="btn">Resume</button>
       </div>
-      <div class="scroll-cta">Scroll</div>
+      <div class="scroll-cta">
+        Scroll
+        <div class="scroll-cta-arw"></div>
+      </div>
     </section>
     <section class="about"></section>
     <section class="projects"></section>
