Project Card Added | CSS Adjustments

--- a/index.html
+++ b/index.html
@@ -83,6 +83,116 @@
       </section>
       <section class="projects">
         <h1 class="title">Projects</h1>
+        <div class="projects-wrapper">
+          <div class="project">
+            <h4 class="project-title">Porfolio Webite</h4>
+            <!-- The source for this image needs to be changed -->
+            <img
+              class="project-image"
+              src="./logos/html-logo.svg"
+              alt="Portfolio Website Image"
+            />
+            <p class="project-desc">
+              This very website was built from scratch using HTML, CSS and
+              Javascript
+            </p>
+            <div class="project-links">
+              <a
+                href="https://krytanik.github.io/portfolio/"
+                target="_blank"
+                rel="noreferrer noopener"
+                >Live Site</a
+              >
+              <a
+                href="https://github.com/KrytaniK/portfolio"
+                target="_blank"
+                rel="noreferrer noopener"
+                >Github Repo</a
+              >
+            </div>
+          </div>
+          <div class="project">
+            <h4 class="project-title">Porfolio Webite</h4>
+            <!-- The source for this image needs to be changed -->
+            <img
+              class="project-image"
+              src="./logos/html-logo.svg"
+              alt="Portfolio Website Image"
+            />
+            <p class="project-desc">
+              This very website was built from scratch using HTML, CSS and
+              Javascript
+            </p>
+            <div class="project-links">
+              <a
+                href="https://krytanik.github.io/portfolio/"
+                target="_blank"
+                rel="noreferrer noopener"
+                >Live Site</a
+              >
+              <a
+                href="https://github.com/KrytaniK/portfolio"
+                target="_blank"
+                rel="noreferrer noopener"
+                >Github Repo</a
+              >
+            </div>
+          </div>
+          <div class="project">
+            <h4 class="project-title">Porfolio Webite</h4>
+            <!-- The source for this image needs to be changed -->
+            <img
+              class="project-image"
+              src="./logos/html-logo.svg"
+              alt="Portfolio Website Image"
+            />
+            <p class="project-desc">
+              This very website was built from scratch using HTML, CSS and
+              Javascript
+            </p>
+            <div class="project-links">
+              <a
+                href="https://krytanik.github.io/portfolio/"
+                target="_blank"
+                rel="noreferrer noopener"
+                >Live Site</a
+              >
+              <a
+                href="https://github.com/KrytaniK/portfolio"
+                target="_blank"
+                rel="noreferrer noopener"
+                >Github Repo</a
+              >
+            </div>
+          </div>
+          <div class="project">
+            <h4 class="project-title">Porfolio Webite</h4>
+            <!-- The source for this image needs to be changed -->
+            <img
+              class="project-image"
+              src="./logos/html-logo.svg"
+              alt="Portfolio Website Image"
+            />
+            <p class="project-desc">
+              This very website was built from scratch using HTML, CSS and
+              Javascript
+            </p>
+            <div class="project-links">
+              <a
+                href="https://krytanik.github.io/portfolio/"
+                target="_blank"
+                rel="noreferrer noopener"
+                >Live Site</a
+              >
+              <a
+                href="https://github.com/KrytaniK/portfolio"
+                target="_blank"
+                rel="noreferrer noopener"
+                >Github Repo</a
+              >
+            </div>
+          </div>
+        </div>
       </section>
       <section class="contact">
         <h1 class="title">Contact</h1>
