--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="styles.css" />
-    <link rel="stylesheet" href="helper.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/helper.css" />
   </head>
   <body>
     <header></header>
@@ -215,6 +215,6 @@
       </section>
     </footer>
 
-    <script src="./index.js"></script>
+    <script src="./js/index.js"></script>
   </body>
 </html>
