--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="styles.css" />
-    <link rel="stylesheet" href="helper.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/helper.css" />
   </head>
   <body>
     <header></header>
@@ -111,87 +111,6 @@
               >
             </div>
           </div>
-          <div class="project">
-            <h4 class="project-title">Porfolio Webite</h4>
-            <!-- The source for this image needs to be changed -->
-            <img
-              class="project-image"
-              src="./logos/html-logo.svg"
-              alt="Portfolio Website Image"
-            />
-            <p class="project-desc">
-              This very website was built from scratch using HTML, CSS and
-              Javascript
-            </p>
-            <div class="project-links">
-              <a
-                href="https://krytanik.github.io/portfolio/"
-                target="_blank"
-                rel="noreferrer noopener"
-                >Live Site</a
-              >
-              <a
-                href="https://github.com/KrytaniK/portfolio"
-                target="_blank"
-                rel="noreferrer noopener"
-                >Github Repo</a
-              >
-            </div>
-          </div>
-          <div class="project">
-            <h4 class="project-title">Porfolio Webite</h4>
-            <!-- The source for this image needs to be changed -->
-            <img
-              class="project-image"
-              src="./logos/html-logo.svg"
-              alt="Portfolio Website Image"
-            />
-            <p class="project-desc">
-              This very website was built from scratch using HTML, CSS and
-              Javascript
-            </p>
-            <div class="project-links">
-              <a
-                href="https://krytanik.github.io/portfolio/"
-                target="_blank"
-                rel="noreferrer noopener"
-                >Live Site</a
-              >
-              <a
-                href="https://github.com/KrytaniK/portfolio"
-                target="_blank"
-                rel="noreferrer noopener"
-                >Github Repo</a
-              >
-            </div>
-          </div>
-          <div class="project">
-            <h4 class="project-title">Porfolio Webite</h4>
-            <!-- The source for this image needs to be changed -->
-            <img
-              class="project-image"
-              src="./logos/html-logo.svg"
-              alt="Portfolio Website Image"
-            />
-            <p class="project-desc">
-              This very website was built from scratch using HTML, CSS and
-              Javascript
-            </p>
-            <div class="project-links">
-              <a
-                href="https://krytanik.github.io/portfolio/"
-                target="_blank"
-                rel="noreferrer noopener"
-                >Live Site</a
-              >
-              <a
-                href="https://github.com/KrytaniK/portfolio"
-                target="_blank"
-                rel="noreferrer noopener"
-                >Github Repo</a
-              >
-            </div>
-          </div>
         </div>
       </section>
     </main>
@@ -215,6 +134,6 @@
       </section>
     </footer>
 
-    <script src="./index.js"></script>
+    <script src="./js/index.js"></script>
   </body>
 </html>
