Mobile Responsiveness Added

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <br />
             Tech Used: HTML, CSS, JavaScript, React
           </p>
-          <div class="project-links flex">
+          <div class="project-links flex-wrap">
             <button class="project-link b-shadow b-blue">Code</button>
             <button class="project-link b-shadow b-red">Live Site</button>
             <button class="project-link b-shadow b-blue">Design</button>
@@ -125,7 +125,7 @@
             <br />
             Tech Used: HTML, CSS, JavaScript, React
           </p>
-          <div class="project-links flex">
+          <div class="project-links flex-wrap">
             <button class="project-link b-shadow b-blue">Code</button>
             <button class="project-link b-shadow b-red">Live Site</button>
             <button class="project-link b-shadow b-blue">Design</button>
@@ -148,7 +148,7 @@
             <br />
             Tech Used: HTML, CSS, JavaScript, React
           </p>
-          <div class="project-links flex">
+          <div class="project-links flex-wrap">
             <button class="project-link b-shadow b-blue">Code</button>
             <button class="project-link b-shadow b-red">Live Site</button>
             <button class="project-link b-shadow b-blue">Design</button>
@@ -159,7 +159,6 @@
         <div class="contact-form-wrapper grid b-grey">
           <h2 class="section-title">Contact Me</h2>
           <div class="contact-info">
-            <p class="subtext">I would love to hear from you!</p>
             <p class="subtext">You can also find me here</p>
             <div class="social-links flex">
               <img
@@ -173,8 +172,9 @@
                 class="social-link"
               />
             </div>
+            <p class="subtext">I would love to hear from you!</p>
             <p class="subtext">
-              Or, you can send me an email directly, at
+              You can aslo send me an email directly, at
               <br />
               <br />
               wick.kyle@gmail.com
@@ -216,7 +216,7 @@
       </section>
     </main>
     <footer>
-      <p class="subtext">Self-Taugh, Self-Made</p>
+      <p class="subtext">Self-Taught, Self-Made</p>
       <p class="subtext muted">@2022 Kyle Wick</p>
     </footer>
 
