Particle System Refactor For Background Animation

--- a/index.html
+++ b/index.html
@@ -16,11 +16,10 @@
   <body>
     <canvas id="bg-canvas"></canvas>
     <header>
-      <!-- Background Settings | WIP -->
       <!-- <div class="bg-settings">
         <button><h3>Close</h3></button>
-      </div>
-      <button id="bg-settings-toggle">Background Settings</button> -->
+      </div> -->
+      <button id="bg-settings-toggle">Background Settings</button>
       <nav class="navbar">
         <div class="hamburger"></div>
         <ul class="nav-items grid">
