Bug Fixes | Settings Menu and Responsiveness

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <section class="b-shadow-reverse b-blue" id="particleSettings">
         <div class="settings-wrapper">
           <div class="settings-header flex">
-            <h4 class="settings-title">Particle System Settings</h4>
+            <h4 class="settings-title">Background Settings</h4>
             <button id="closePSettings"></button>
           </div>
           <!-- Color and Shape Settings | Needs Work -->
