Fixed social links in contact form

--- a/index.html
+++ b/index.html
@@ -262,16 +262,20 @@
           <div class="contact-info">
             <p class="subtext">You can also find me here</p>
             <div class="social-links flex">
-              <img
-                src="./svgs/Logos/Github-logo.svg"
-                alt="Github Link"
-                class="social-link"
-              />
-              <img
-                src="./svgs/Logos/LinkedIn-Logo.svg"
-                alt="Linked-In Link"
-                class="social-link"
-              />
+              <a href="https://github.com/KrytaniK" target="_blank">
+                <img
+                  src="./svgs/Logos/Github-logo.svg"
+                  alt="Github Link"
+                  class="social-link"
+                />
+              </a>
+              <a href="https://www.linkedin.com/in/kyle-wick/" target="_blank">
+                <img
+                  src="./svgs/Logos/LinkedIn-Logo.svg"
+                  alt="Linked-In Link"
+                  class="social-link"
+                />
+              </a>
             </div>
             <p class="subtext">I would love to hear from you!</p>
             <p class="subtext">
