Fixed Site Link for project card

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
             </p>
             <div class="project-links flex-wrap">
               <a
-                href="https://github.com/KrytaniK/portfolio"
+                href="https://krytanik.github.io/portfolio/"
                 target="_blank"
                 class="project-link b-shadow b-blue"
                 >Code</a
@@ -289,6 +289,7 @@
             action="mailto:wick.kyle@gmail.com"
             class="contact-form grid"
             id="form-contact"
+            autocomplete="off"
           >
             <input type="hidden" name="contact_number" />
             <input
