Fixed Link Mixup in project card

--- a/index.html
+++ b/index.html
@@ -239,12 +239,12 @@
             </p>
             <div class="project-links flex-wrap">
               <a
-                href="https://krytanik.github.io/portfolio/"
+                href="https://github.com/KrytaniK/portfolio"
                 target="_blank"
                 class="project-link b-shadow b-blue"
                 >Code</a
               >
-              <a href="/" class="project-link b-shadow b-red">Live Site</a>
+              <a href="https://krytanik.github.io/portfolio/" class="project-link b-shadow b-red">Live Site</a>
               <a
                 href="https://www.figma.com/file/Wm7HhFa1Gr1FKWHWiKyrIL/Portfolio-Website-Design?node-id=0%3A1"
                 target="_blank"
